# evolution-on

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  PKGBUILD  autogen.sh  configure.ac  git.mk
m4/: evolution.m4
po/: Makefile  Makefile.in
src/: Makefile.am  Makefile.in  evolution-on.convert  evolution-on.schemas.in  evolution-tray.convert  evolution-tray.schemas.in  on_icon.h  on_properties.h  org-gnome-evolution-on.eplug.xml  org-gnome-evolution-tray.eplug.xml  org.gnome.evolution.plugin.evolution-on.gschema.xml.in  org.gnome.evolution.plugin.evolution-tray.gschema.xml.in  tray.c
