SUBDIRS = src

## We dist autogen.sh since this is an example program
## Real-world programs do not need to distribute autogen.sh
## But there is no harm in it, and you probably should.

EXTRA_DIST = \
	autogen.sh		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

DISTCLEANFILES = \
  intltool-extract \
  intltool-merge \
  intltool-update
